<maint>:fix the bootom navigation bar too large that blocks the view.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -109,8 +109,7 @@ body {
     width: 100%;
     text-align: center;
     color: black;
-    /*margin-top:200px;*/
-    padding-bottom: 50px;
+    padding-bottom: 5%;
 }
     
 .ads{
@@ -426,6 +425,7 @@ h3.mission-text {
     text-align: center;
 }
 
+
 /*Iter 1-2*/
 /**************************************full img background**********/
 html,
@@ -509,11 +509,9 @@ body,
         background-color: white;
         opacity: 0.6;
         width: 100%;
-        height: 100%;
         font-size: 20px;
         text-align: center;
         color: black;
-        margin-top: -190px;
     }
 }
     
@@ -530,10 +528,6 @@ body,
     
     .main-button {
         margin-left: 10px
-    }
-    
-    .featured-comment {
-        margin-top: -50px;
     }
 }
 
@@ -577,11 +571,9 @@ body,
         background-color: white;
         opacity: 0.6;
         width: 100%;
-        height: 100%;
         font-size: 20px;
         text-align: center;
         color: black;
-        margin-top: -200px
     }
         
 }
